Vavr core, move back to Optionals